--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
+    "baseUrl": ".",                
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"]         
+    },
+    "jsx": "react-native",
+    //"jsx": "react-jsx",
+    "lib": ["esnext"],
+    "moduleResolution": "node",
+    "target": "esnext",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "noEmit": true
   },
   "include": [
     "**/*.ts",
