--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@prisma/client": "^6.15.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -19,6 +21,7 @@
     "date-fns": "^4.1.0",
     "expo": "~53.0.5",
     "expo-blur": "~14.1.4",
+    "expo-calendar": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
@@ -39,9 +42,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-calendar": "~14.1.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -49,6 +50,7 @@
     "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prisma": "^6.15.0",
     "typescript": "~5.8.3"
   },
   "private": true
