--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",                
-    "paths": {
-      "@/*": ["./*"]         
-    },
-    "jsx": "react-native",
-    //"jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": { "@/*": ["./*"] },
+    "jsx": "react-jsx",
     "lib": ["esnext"],
     "moduleResolution": "node",
     "target": "esnext",
